--- a/gb/22/11/24/n13872443.md
+++ b/gb/22/11/24/n13872443.md
@@ -29,38 +29,38 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/5/n10457370.md#1">魔鬼在统治着我们的世界(14)：经济篇(上)</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897982.md#1">因说话有韩国口音 朝鲜学生被退学送去挖矿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898030.md#1">军权仅次金正恩 朝鲜军中2号人物被撤换</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895417.md#1">组图：乌克兰利沃夫举行反坦克武器体验展</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065531.md#1">普京：很快会和习近平会面</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065312.md#1">【名家专栏】美日韩三国亮剑中共</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065122.md#1">尼加拉瓜迎来罕见白色美洲狮 全球仅四只</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/27/n10936495.md#1" target="_blank">林辉：抗日名将殉国身后妻儿惨到乞讨</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/27/n11481899.md#1" target="_blank">美严审迫害者签证 震慑中共 精英支持</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/8/n10624963.md#1" target="_blank">捡纸鸣冤、“反毛”凉鞋与“毛语录仗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/27/n13893016.md#1">《推背图》预言江泽民死亡和其后瘟疫惨象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/23/n13890728.md#1">【百年真相】十万人命当儿戏 中共大规模杀人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13891849.md#1">【未解之谜】预言家珍妮之一 肯尼迪家族的“诅咒”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891107.md#1">出生七年才说话 轮回转生为一人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896430.md#1">【十字路口】传中共放“阳”出国 让大疫重演？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896554.md#1">冯小刚：在国外三个多月没阳 回国十来天阳了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896032.md#1">【一线采访】河北疫情雪崩 医院接近崩溃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895920.md#1">学者：疫情大爆发 中国两种声音激烈较量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896835.md#1">台娱圈新年首发喜弹 翁立友“已登记”不宴客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897308.md#1">蒙古族歌王拉苏荣病亡 曾多次为中共党魁演出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896444.md#1">李钟硕与IU公开恋情 已交往4个多月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895820.md#1">周晓涵要求打戏来真的 曝陈亚兰不照剧本演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/30/n13895784.md#1">弥补获奖感言遗憾 汤唯隔空感谢丈夫和女儿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896498.md#1">党媒终于承认染疫后遗症 心肌炎多发于中青年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13895971.md#1">【车评】比电动车更实用 2022 Lexus NX 450h+ F Sport Handling AWD</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/29/n13894557.md#1">冬季心血管疾病风险大增 医生教你如何预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897182.md#1">新年伊始 世界各地有哪些奇特的传统？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/20/n13888098.md#1">人际关系的隐形力量 “信任”是最重要因素</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064930.md#1">【新闻五人行】恐惧西方福利 习有经济大招吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065190.md#1">【全球新闻】中共公布新地图 多邻国群起抗议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064651.md#1">【中国禁闻】海外百万人观看中共禁播的纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063629.md#1">王友群：中共即将灭亡的十大表现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063653.md#1">岳山： 孙志刚落马四看点 习敲打三名前常委？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063980.md#1">中国房地产爆雷拖累供应商 近3万亿货款待付</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063512.md#1">朱芯仪抗癌疗程结束 卫斯理嗨喊妻“毕业了”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063484.md#1">无法忽视的女性高发“癌”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/24/n13872443.htm">在华企业濒破产 斯泰兰蒂斯拟在印度生产电动车</a></p><hr>
