--- a/gb/19/7/3/n11362815.md
+++ b/gb/19/7/3/n11362815.md
@@ -2,19 +2,21 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>她在车里向大棕熊挥手 它礼貌回应被赞爆</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/bear-in-the-driveway-i-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/bear-in-the-driveway-i-600x400.jpg" />///image2=```diff
+- 不少人曾拍下这只大熊和同伴向人类挥手的影片。狗熊示意图。(Shutterstock)
+```
 <h6>不少人曾拍下这只大熊和同伴向人类挥手的影片。狗熊示意图。(Shutterstock)
 </h6>
 <hr>
 	<p>【大纪元2019年07月04日讯】（大纪元记者苏琳综合报导）美国有一只“会招手”的大<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A3%95%E7%86%8A.md#1">棕熊</a>，多年来俘获了千百万人的心。</p>
 <p>它的家在华盛顿州史魁恩（Sequim）市的奥林匹克运动农场（Olympic Game Farm），这里生活着好几十种动物。有不少人曾拍下这只大熊和同伴向人类挥手的影片，下面这一支已有近2,000万人观看。</p>
-<p><center><a src=""></a><a href="https://dep6yudto3kbo.cloudfront.net/Y0w68xiyl"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/O6Xo21L0ybE" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>在视频下面，很多网友不禁开起玩笑来。</p>
+<p><center><a src=""></a><a href="https://d1cayv19uhqaei.cloudfront.net/M4w68xiym"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/O6Xo21L0ybE" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>在视频下面，很多网友不禁开起玩笑来。</p>
 <p style="padding-left: 30px;">“它这么友好，一定来自加拿大。”“想拥抱这只熊，就是被抓伤也值。”</p>
 <p style="padding-left: 30px;">“这是熊将接管世界的第一个迹象。它们先像我们一样挥手，很快它们就会学会开车、买房分时度假了。”</p>
 <p style="padding-left: 30px;">“看这手腕抖的，那个围栏安得真不合适。”</p>
-<p><center><a src=""></a><a href="https://dep6yudto3kbo.cloudfront.net/Y0w68xiyl"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/HJexN_ok5qw" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>主人介绍说，农场上动物很多，超过200只，都是从其它机构或个人那里重新安置到农场的。从<ahref="https://olygamefarm.com/gallery/" target="_blank" rel="noopener noreferrer">网站相册</a>来看，除了狗熊，还有狮子、骆驼、老虎、斑马、孔雀等。</p>
+<p><center><a src=""></a><a href="https://d1cayv19uhqaei.cloudfront.net/M4w68xiym"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/HJexN_ok5qw" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>主人介绍说，农场上动物很多，超过200只，都是从其它机构或个人那里重新安置到农场的。从<ahref="https://olygamefarm.com/gallery/" target="_blank" rel="noopener noreferrer">网站相册</a>来看，除了狗熊，还有狮子、骆驼、老虎、斑马、孔雀等。</p>
 <p>“乘车观光之旅会让游客们对这些神奇的动物留下生动记忆；你一开始难以想像的事情，会让你惊喜。”主人还说，“友好的骆驼和牦牛从你的手中吃面包，滑稽的大熊站起来挥挥手，麋鹿和水牛在牧场上祥和地吃草……”</p>
-<p><center><a src=""></a><a href="https://dep6yudto3kbo.cloudfront.net/Y0w68xiyl"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/MNWOesnAWyE" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>这只高人气大熊属于科迪亚克<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A3%95%E7%86%8A.md#1">棕熊</a>（Kodiak bears，又名<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E6%8B%89%E6%96%AF%E5%8A%A0%E6%A3%95%E7%86%8A.md#1">阿拉斯加棕熊</a>），它们的体重可达726公斤，一般雄性体重也能达到454~544公斤。虽然体型和北极熊接近，但有人认为它们是北美陆地上体型最大的肉食动物。</p>
+<p><center><a src=""></a><a href="https://d1cayv19uhqaei.cloudfront.net/M4w68xiym"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/MNWOesnAWyE" width="600" b="338" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>这只高人气大熊属于科迪亚克<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%A3%95%E7%86%8A.md#1">棕熊</a>（Kodiak bears，又名<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%98%BF%E6%8B%89%E6%96%AF%E5%8A%A0%E6%A3%95%E7%86%8A.md#1">阿拉斯加棕熊</a>），它们的体重可达726公斤，一般雄性体重也能达到454~544公斤。虽然体型和北极熊接近，但有人认为它们是北美陆地上体型最大的肉食动物。</p>
 <p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A7%91%E8%BF%AA%E4%BA%9A%E5%85%8B%E6%A3%95%E7%86%8A.md#1">科迪亚克棕熊</a>属于<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B2%BF%E6%B5%B7%E6%A3%95%E7%86%8A.md#1">沿海棕熊</a>（coastal brown bears），不过它们只生活在阿拉斯加科迪亚克群岛，和阿拉斯加大陆的棕熊已经隔绝了12万年，因其体型巨大，被列为一个独立亚种。</p>
 <figure id="attachment_11362843" aria-describedby="caption-attachment-11362843" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/20160907-orphaned-wildlife-center-James-Smith-7.jpg"><img class="wp-image-11362843 size-large" src="https://i.epochtimes.com/assets/uploads/2019/07/20160907-orphaned-wildlife-center-James-Smith-7-600x400.jpg" alt="时年22岁的Jimbo在纽约州的孤儿野生动物中心泡澡。(Courtesy of James Smith)" width="600" b="400" /></a><figcaption id="caption-attachment-11362843" class="wp-caption-text">时年22岁的Jimbo在纽约州的孤儿野生动物中心泡澡。(Courtesy of James Smith)</figcaption></figure>
 <figure id="attachment_11362848" aria-describedby="caption-attachment-11362848" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/07/20160907-orphaned-wildlife-center-James-Smith-5.jpg"><img class="wp-image-11362848 size-large" src="https://i.epochtimes.com/assets/uploads/2019/07/20160907-orphaned-wildlife-center-James-Smith-5-600x400.jpg" alt="Jimbo玩水中。(Courtesy of James Smith)" width="600" b="400" /></a><figcaption id="caption-attachment-11362848" class="wp-caption-text">Jimbo玩水中。(Courtesy of James Smith)</figcaption></figure>
@@ -26,39 +28,45 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948371.md#1">怀第二胎 赛迪．罗伯逊：不再那么表面看事情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947707.md#1">是童年！《超级玛利欧》Q版角色及动画大公开</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947252.md#1">《惊声尖叫》女星考克斯承认美容是最大的错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947293.md#1">奥斯卡主持人坎摩尔：如果有人搧我耳光我就跑</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065298.md#1">台8月PMI续跌至45.5% 制造业Q3不如预期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065303.md#1">国泰APP当机风波 台金管会罚证券、期货210万元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065308.md#1">劳动基金7月再赚1544亿元 今年来获利6254亿元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065307.md#1">地主反对龙科扩建征收 王美花：应多沟通</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065305.md#1">无薪假1万2388人 制造业占逾八成</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064754.md#1">新光金：中国经济如“零件坏掉的汽车”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064757.md#1">需求略升 台景气灯号终止连 4蓝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064760.md#1">台湾5G毫米波申请有望？ 中华电：待手机终端成熟</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064755.md#1">保险业第2季财报出炉 3寿险踩资本不足红线</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064094.md#1">接轨全球最低税负 财部评估一年内税率增至15%</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10086007.md#1" target="_blank">郑兢业：人吃与吃人（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li><hr>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/10/n10045322.md#1" target="_blank">《苦菜花》人物原型的真实人生（3）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/5/22/n13743021.md#1">大劫前冥府造册 是否真的在劫难逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/20/n13933872.md#1">诗：聆听创世主的雷音 ⑴⑵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947539.md#1">【探索时分】援乌上万枚反坦克导弹 美军工强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947709.md#1">【时事金扫描】习连任的百年轮回 两会提案怪异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948202.md#1">【财商天下】Temu狂飙北美 烧钱越多隐患越大？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947628.md#1">李强任总理 3票反对8票弃权 曾因封城遭诟病</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947818.md#1">赵立坚现身中越边境刷油漆 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947637.md#1">分析：中南海新“习李配”对经济的影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947566.md#1">关晓彤零遮掩买早餐 与店员逗趣对话笑翻网友</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947269.md#1">TWICE发行迷你12辑 透露成员关系亲密秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946900.md#1">陆男团偶像徐炳超消失半年 街头卖包子上热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947592.md#1">消失7个月 26岁男星蒋智豪确诊肺癌晚期</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946850.md#1">退休前想重温拍剧 梁朝伟未必首选TVB</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13943988.md#1">快速摆脱身体不适 高剂量维生素C有助改善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/10/n13947035.md#1">抗癌有最佳时间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938698.md#1">随时随地都能专心工作的7个诀窍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946765.md#1">一房二用 10种隐形床打造复合空间</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/9/n13946732.md#1">大脑扫描显示 左撇子可能比较有创造力</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064930.md#1">【新闻五人行】恐惧西方福利 习有经济大招吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065190.md#1">【全球新闻】中共公布新地图 多邻国群起抗议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064651.md#1">【中国禁闻】海外百万人观看中共禁播的纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063629.md#1">王友群：中共即将灭亡的十大表现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063653.md#1">岳山： 孙志刚落马四看点 习敲打三名前常委？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063980.md#1">中国房地产爆雷拖累供应商 近3万亿货款待付</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063512.md#1">朱芯仪抗癌疗程结束 卫斯理嗨喊妻“毕业了”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063484.md#1">无法忽视的女性高发“癌”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/7/3/n11362815.htm">她在车里向大棕熊挥手 它礼貌回应被赞爆</a></p><hr>
